--- a/fullHomeTheaterApp/client/partials/partial1.html
+++ b/fullHomeTheaterApp/client/partials/partial1.html
@@ -16,31 +16,22 @@
 </div>
 
 <!-- Where the D3 graph visualization will go -->
-<div id="canvas"> 
-<!-- 	<h1>WUT......{{test}}</h1>
-
-	<ul> {{televisions.brand}}</ul>
-	<ul>{{amplifiers.brand}}</ul>
-	<ul>{{speakers.brand}} speaker is {{speakers.cost | currency}}</ul> -->
-	<!-- <ul ng-repeat='component in components'> {{component.brand}} {{component.component}} is {{component.cost | currency}}</ul> -->
-
-	<ng-d3-chart components='{{components}}' option-x="xVariable" option-y="yVariable" system-designs="systemDesigns"></ng-d3-chart>
-
+<div class="container">
+	<div class="row" id="canvas">
+		<ng-d3-chart components='components' option-x="xVariable" option-y="yVariable" system-designs="systemDesigns"></ng-d3-chart>
+	</div>
 </div>
 
-<!--  Table of Designs -->
+<!--  Table of Designs
+	TO-DO: Look into using this Angular Grid UI thing. It seems to offer more functionality,
+	best of which is automatic sorting.
+ -->
 <div class="container">
 	<div>
 		<table class="table table-striped table-hover" border=1 id="designsTable">
 			<thead>
 				<tr>
-					<th> Design Name </th>
-					<th> Television </th>
-					<th> Speaker </th>
-					<th> Amplifier </th>
-					<th> Cost </th>
-					<th> Performance </th>
-					<th> Reliability </th>
+					<th class="text-center" ng-repeat="header in tableHeaders">{{header}}</th>
 				</tr>
 			</thead>
 			<tbody>
