Improved form layout and added functionality for inputs

--- a/fullHomeTheaterApp/client/css/style.css
+++ b/fullHomeTheaterApp/client/css/style.css
@@ -42,6 +42,10 @@ body {
 	text-align: center;
 }
 
+#inputForm {
+    padding-top: 50px;
+}
+
 /* Set a div id="requirements" to apply this style*/
 #requirements {
 	text-align: center;
