--- a/fullHomeTheaterApp/client/partials/partial2.html
+++ b/fullHomeTheaterApp/client/partials/partial2.html
@@ -3,97 +3,110 @@
 	<div class="form-group">
 	<label class="col-sm-2 control-label">Component</label>
 	<div class="col-sm-4">
-	  <select class="form-control" ng-model="newComponent" ng-options="value.name for value in axisValues"></select>
+	  <select class="form-control" ng-model="componentSelect" ng-options="value.name for value in axisValues"></select>
 	</div>
 	</div>
 
 	  <div class="form-group">
 		<label class="col-sm-2 control-label">Brand</label>
 		<div class="col-sm-4">
-		  <input class="form-control" placeholder="Brand">
+		  <input class="form-control" placeholder="Brand" ng-model="brand">
 		</div>
 	</div>
 
 	<div class="form-group">
 		<label class="col-sm-2 control-label">Cost</label>
 		<div class="col-sm-4">
-		  <input class="form-control" placeholder="Cost">
+		  <input class="form-control" placeholder="Cost" ng-model="cost">
 		</div>
 	</div>
 
 	<div class="form-group"> 
 		<label class="col-sm-2 control-label">Performance</label>
 		<div class="col-sm-4">
-		  <input class="form-control" placeholder="Performance">
+		  <input class="form-control" placeholder="Performance" ng-model="performance">
 		</div>
 	</div>
 
 	<div class="form-group">
 		<label class="col-sm-2 control-label">Reliability</label>
 		<div class="col-sm-4">
-		  <input class="form-control" placeholder="Reliability">
+		  <input class="form-control" placeholder="Reliability" ng-model="reliability">
 		</div>
 	</div>
 
 	<div class="form-group">
 		<label class="col-sm-2 control-label">Height</label>
 		<div class="col-sm-4">
-		  <input class="form-control" placeholder="Height">
+		  <input class="form-control" placeholder="Height" ng-model="height">
 		</div>
 	</div>
 
 	<div class="form-group">
 	  <label class="col-sm-2 control-label">Width</label>
 	  <div class="col-sm-4">
-	    <input class="form-control" placeholder="Width">
+	    <input class="form-control" placeholder="Width" ng-model="width">
 	  </div>
 	</div>
 
 	<div class="form-group">
 	  <label class="col-sm-2 control-label">Thickness</label>
 	  <div class="col-sm-4">
-	  	<input class="form-control" placeholder="Thickness">
+	  	<input class="form-control" placeholder="Thickness" ng-model="thickness">
 	  </div>
 	</div>
 
 	<div class="form-group">
 	  <label class="col-sm-2 control-label">Weight</label>
 	  <div class="col-sm-4">
-	  	<input class="form-control" placeholder="Weight">
+	  	<input class="form-control" placeholder="Weight" ng-model="weight">
 	  </div>
 	</div>
 
 	<div class="form-group">
 		  <label class="col-sm-2 control-label">Power Handling</label>
 	  <div class="col-sm-4">
-	  	<input class="form-control" placeholder="Power Handling">
+	  	<input class="form-control" placeholder="Power Handling" ng-model="powerHandling">
 	  </div>
 	</div>
 
 	<div class="form-group">
 	  <label class="col-sm-2 control-label">Power Handling Min</label>
 	  <div class="col-sm-4">
-	  	<input class="form-control" placeholder="Power Handling Min">
+	  	<input class="form-control" placeholder="Power Handling Min" ng-model="powerHandlingMin">
 	  </div>
 	</div>
 
 	<div class="form-group">
 	  <label class="col-sm-2 control-label">Power Handling Max</label>
 	  <div class="col-sm-4">
-	  	<input class="form-control" placeholder="Power Handling Max">
+	  	<input class="form-control" placeholder="Power Handling Max" ng-model="powerHandlingMax">
 	  </div>
 	</div>
 
 	<div class="form-inline form-group">
 	  <label class="col-sm-2 control-label">Inputs</label>
 	  <div class="col-sm-2">
-		<input class="form-control" placeholder="Type" ng-model="type">
+		<input class="form-control" placeholder="Type" ng-model="inputType">
 	  </div>
 	  <div class="col-sm-3">
-	    <input class="form-control" placeholder="Quantity" ng-model="quantity">
+	    <input class="form-control" placeholder="Quantity" ng-model="inputQuantity">
 	  </div>
 	  <div class="col-sm-1">
-	  	<button class="btn" ng-click="addNewInput(type, quantity)">Add</button>
+	  	<button class="btn" ng-click="addNewInput(inputType, inputQuantity)">Add</button>
+	  </div>
+	</div>
+
+	<div class="form-inline form-group">
+	  <label class="col-sm-2 control-label">Outputs</label>
+	  <div class="col-sm-2">
+	  	<input class="form-control" placeholder="Type" ng-model="outputType">
+	  </div>
+	  <div class="col-sm-3">
+	  	<input class="form-control" placeholder="Quantity" ng-model="outputQuantity">
+	  </div>
+	  <div class="col-sm-1">
+	  	<button class="btn" ng-click="addNewOutput(outputType, outputQuantity)">Add</button>
 	  </div>
 	</div>
 
