trying to add code to POST

--- a/fullHomeTheaterApp/client/partials/partial2.html
+++ b/fullHomeTheaterApp/client/partials/partial2.html
@@ -110,31 +110,9 @@
 	  </div>
 	</div>
 
+	<div class="form-group">
+	  <div class="col-sm-offset-3">
+	  	<button class="btn btn-primary col-sm-3" ng-click="addNewComponent(componentSelect, brand, cost, performance, reliability, height, width, thickness, weight, powerHandling, powerHandlingMin, powerHandlingMax, inputsArray, outputsArray)">Submit</button>
+	  </div>
+	</div>
 </form>
-
-<!-- <form class="form-inline col-sm-offset-3">
-  <label class="col-sm-2 control-label">Inputs</label>
-  <div class="form-group col-sm-8">
-    <input class="form-control col-sm-4" placeholder="Type">
-    <input class="form-control col-sm-4" placeholder="Quantity">
-  </div>
-
-</form> -->
-
-<!-- <form class="form-inline">
-  <label class="col-sm-2 control-label">Outputs</label>
-  <div class=" form-group col-sm-8">
-  	<input class="form-control col-sm-4" placeholder="Type">
-  	<input class="form-control col-sm-4" placeholder="Quantity">
-  	<button>Add One</button>
-  </div>
-</form> -->
-
-<!-- <div class="form-group">
-  <div class="col-sm-offset-3">
-  	<button class="btn btn-primary col-sm-3">Submit</button>
-  </div>
-</div> -->
-
-<!-- 	<button>Edit</button>
-	<button>Delete</button> -->
