began setting up the edit component tab

--- a/fullHomeTheaterApp/client/css/style.css
+++ b/fullHomeTheaterApp/client/css/style.css
@@ -59,3 +59,11 @@ body {
     -moz-box-shadow: 0 0 8px rgba(82,168,236,.6);
     box-shadow: 0 0 8px rgba(82,168,236,.6) !important;
 }
+
+.myHalfCol .leftSide {
+    background-color: yellow;
+}
+
+.myHalfCol .rightSide {
+    background-color: gray;
+}
