minor html changes and such to edit tab

--- a/fullHomeTheaterApp/client/css/style.css
+++ b/fullHomeTheaterApp/client/css/style.css
@@ -61,9 +61,9 @@ body {
 }
 
 .myHalfCol .leftSide {
-    background-color: yellow;
+    /*background-color: yellow;*/
 }
 
 .myHalfCol .rightSide {
-    background-color: gray;
+    /*background-color: gray;*/
 }
