--- a/fullHomeTheaterApp/client/partials/editComponentForm.html
+++ b/fullHomeTheaterApp/client/partials/editComponentForm.html
@@ -2,6 +2,7 @@
   
 	<div class="form-group">
 		<label class="col-sm-2 control-label">ID</label>
+		
 		<div class="col-sm-4">
 			<input class="form-control" placeholder="ID" ng-model="componentId">
 		</div>
@@ -12,7 +13,6 @@
 		<div class="col-sm-4">
 			<!-- Added this 'as' to set the value. Wasn't working before I added it -->
 		  <select class="form-control" ng-model="componentSelect.value" ng-options="type.value as type.name for type in componentTypes"></select>
-		</div>
 		</div>
 	</div>
 
@@ -94,6 +94,23 @@
 	</div>
 
 	<div class="form-inline form-group">
+	  <!-- Inputs list -->
+	  <h5 ng-click="clearInputForm()">Inputs</h5>
+	  <ul class="noBullets">
+		<li ng-repeat="input in componentInputs">
+		  <span ng-click="populateInput(input)">Type: {{input.type}} | Quantity: {{input.quantity}}</span>
+	    </li>
+	  </ul>
+
+	  <!-- Outputs list -->
+	  <h5 ng-click="clearOutputForm()">Outputs</h5>
+	  <ul class="noBullets">
+		<li ng-repeat="output in componentOutputs">
+		  <span ng-click="populateOutput(output)">Type: {{output.type}} | Quantity: {{output.quantity}}</span>
+	    </li>
+	  </ul>
+
+	  <!-- Inputs form -->
 	  <label class="col-sm-2 control-label">Inputs</label>
 	  <div class="col-sm-2">
 		<input class="form-control" placeholder="Type" ng-model="inputType">
@@ -101,11 +118,14 @@
 	  <div class="col-sm-3">
 	    <input class="form-control" placeholder="Quantity" ng-model="inputQuantity">
 	  </div>
-	  <div class="col-sm-1">
-	  	<button class="btn" id="addInput" ng-click="addNewInput(inputType, inputQuantity)">Add</button>
+	  <div class="btn-group inline">
+	  	<button class="btn btn-success" id="addInput" ng-click="">Add</button>
+	  	<button class="btn btn-info" id="updateOutput" ng-click="">Update</button>
+	  	<button class="btn btn-danger" id="deleteOutput" ng-click="">Delete</button>	  	
 	  </div>
 	</div>
 
+	<!-- Outputs form -->
 	<div class="form-inline form-group">
 	  <label class="col-sm-2 control-label">Outputs</label>
 	  <div class="col-sm-2">
@@ -114,8 +134,10 @@
 	  <div class="col-sm-3">
 	  	<input class="form-control" placeholder="Quantity" ng-model="outputQuantity">
 	  </div>
-	  <div class="col-sm-1">
-	  	<button class="btn" id="addOutput" ng-click="addNewOutput(outputType, outputQuantity)">Add</button>
+	  <div class="btn-group inline">
+	  	<button class="btn btn-success" id="addOutput" ng-click="">Add</button>
+	  	<button class="btn btn-info" id="updateOutput" ng-click="">Update</button>
+	  	<button class="btn btn-danger" id="deleteOutput" ng-click="">Delete</button>
 	  </div>
 	</div>
 
