added service, controller, html, and started a route for delete input

--- a/fullHomeTheaterApp/client/partials/editComponentForm.html
+++ b/fullHomeTheaterApp/client/partials/editComponentForm.html
@@ -98,7 +98,7 @@
 	  <h5 ng-click="clearInputForm()">Inputs</h5>
 	  <ul class="noBullets">
 		<li ng-repeat="input in componentInputs">
-		  <span ng-click="populateInput(input)">Type: {{input.type}} | Quantity: {{input.quantity}}</span>
+		  <span ng-click="populateInput(input)">ID: {{input._id}} Type: {{input.type}} | Quantity: {{input.quantity}}</span>
 	    </li>
 	  </ul>
 
@@ -118,10 +118,13 @@
 	  <div class="col-sm-3">
 	    <input class="form-control" placeholder="Quantity" ng-model="inputQuantity">
 	  </div>
+	  <div class="col-sm-2">
+	  	<input class="form-control" placeholder="ID" ng-model="inputId">
+	  </div>
 	  <div class="btn-group inline">
 	  	<button class="btn btn-success" id="addInput" ng-click="">Add</button>
-	  	<button class="btn btn-info" id="updateOutput" ng-click="">Update</button>
-	  	<button class="btn btn-danger" id="deleteOutput" ng-click="">Delete</button>	  	
+	  	<button class="btn btn-info" id="updateInput" ng-click="">Update</button>
+	  	<button class="btn btn-danger" id="deleteInput" ng-click="deleteInput(componentId, inputId)">Delete</button>	  	
 	  </div>
 	</div>
 
