Finished input button functionality, and added updates to input list.

--- a/fullHomeTheaterApp/client/partials/editComponentForm.html
+++ b/fullHomeTheaterApp/client/partials/editComponentForm.html
@@ -122,7 +122,7 @@
 	  	<input class="form-control" placeholder="ID" ng-model="inputId">
 	  </div>
 	  <div class="btn-group inline">
-	  	<button class="btn btn-success" id="addInput" ng-click="">Add</button>
+	  	<button class="btn btn-success" id="addInput" ng-click="addInput(componentId, inputType, inputQuantity)">Add</button>
 	  	<button class="btn btn-info" id="updateInput" ng-click="updateInput(componentId, inputId, inputType, inputQuantity)">Update</button>
 	  	<button class="btn btn-danger" id="deleteInput" ng-click="deleteInput(componentId, inputId)">Delete</button>	  	
 	  </div>
