--- a/fullHomeTheaterApp/client/partials/editComponentForm.html
+++ b/fullHomeTheaterApp/client/partials/editComponentForm.html
@@ -142,7 +142,7 @@
 	  </div>	  
 	  <div class="btn-group inline">
 	  	<button class="btn btn-success" id="addOutput" ng-click="">Add</button>
-	  	<button class="btn btn-info" id="updateOutput" ng-click="">Update</button>
+	  	<button class="btn btn-info" id="updateOutput" ng-click="updateOutput(componentId, outputId, outputType, outputQuantity)">Update</button>
 	  	<button class="btn btn-danger" id="deleteOutput" ng-click="deleteOutput(componentId, outputId)">Delete</button>
 	  </div>
 	</div>
