completed input/output functionality and added a e2e test for it.

--- a/fullHomeTheaterApp/client/partials/editComponentForm.html
+++ b/fullHomeTheaterApp/client/partials/editComponentForm.html
@@ -141,7 +141,7 @@
 	  	<input class="form-control" placeholder="ID" ng-model="outputId">
 	  </div>	  
 	  <div class="btn-group inline">
-	  	<button class="btn btn-success" id="addOutput" ng-click="">Add</button>
+	  	<button class="btn btn-success" id="addOutput" ng-click="addOutput(componentId, outputType, outputQuantity)">Add</button>
 	  	<button class="btn btn-info" id="updateOutput" ng-click="updateOutput(componentId, outputId, outputType, outputQuantity)">Update</button>
 	  	<button class="btn btn-danger" id="deleteOutput" ng-click="deleteOutput(componentId, outputId)">Delete</button>
 	  </div>
